--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-               <img src="images/logo.png" class="logo">
+               <img src="images/logo1.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Hello my name is</p>
+                <p>Hello, my name is</p>
                 <h1><span>Anand</span>  Kumar</h1><br>
                 <h2>And I'm a <span class="input"></span></h2>
             </div>
